# nlp-with-spaCY

./: guide-to-nlp-with-spacy.ipynb
SpeedReader/: main.py  pyproject.toml  requirements.txt
